# gametank-emu-rs

./: Cargo.toml  README.md  justfile
.github/workflows/: release-wasm.yaml
src/: app.rs  app_delegation.rs  app_initialized.rs  app_uninit.rs  audio_output.rs  blitter.rs  color_map.rs  egui_renderer.rs  emulator.rs  gamepad.rs  gametank.rs  graphics.rs  hello.gtr  helpers.rs  input.rs  main.rs
src/app_ui/: gametankboy.rs  mod.rs  ram_inspector.rs  vram_viewer.rs
src/cartridges/: cart2m.rs  cart32k.rs  cart8k.rs  mod.rs
src/emulator/: blitter.rs  color_map.rs  emulator.rs  mod.rs
src/emulator/cartridges/: cart2m.rs  cart32k.rs  cart8k.rs  mod.rs
src/emulator/gametank_bus/: acp_bus.rs  cpu_bus.rs  reg_blitter.rs  reg_system_control.rs
src/emulator/roms/: game(1).gtr  game.gtr  gtj3.gtr  microvoid.gtr  multi.gtr
src/gametank_bus/: acp_bus.rs  bus.rs  cpu_bus.rs  mod.rs  reg_blitter.rs  reg_system_control.rs  registers.rs
src/test_cartridges/: microvoid.gtr
web/: index.html  index.js
