[package]
name = "gametank-emu-rs"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true

[dependencies]
pixels = "0.14.0"
winit = { version = "0.29.10", features = ["rwh_05"]}
winit_input_helper = "0.15.3"

# just wasm things
console_error_panic_hook = "0.1"
wee_alloc = "0.4.5"
wasm-bindgen = "0.2.91"
web-sys = { version = "0.3.68", features = ["Performance"] }
getrandom = { version = "0.2.12", features = ["js"] } # is this a wasm thing?

# logging / profiling
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tracing-wasm = "0.2.1"

# audio sybsystem
klingt = { path = "../klingt", features = [] }
rtrb = "0.3.1"
enum_delegate = "0.2.0"
petgraph = "0.5.1"
dasp_graph = "0.11.0"
dasp_signal = "0.11.0"
dasp_interpolate = {  version = "0.11.0", features = ["linear", "sinc"] }
dasp_frame = "0.11.0"
dasp_ring_buffer = "0.11.0"


futures = "0.3.30"
#wasm-bindgen-futures = "0.4.41"
rand = { version = "0.8.5" }

w65c02s = "0.9.2"
bit_field = "0.10.2"
bitfield = "0.14.0"
