[package]
name = "gametank-emu-rs"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true

[dependencies]
# app shit
winit = { version = "0.30.5", features = ["rwh_06"] }
raw-window-handle = "0.6"
egui = { version = "0.29" }
egui_flex = "0.1"
egui_extras = "0.29"
egui-wgpu = { version = "0.29",features = ["winit"] }
egui-winit = { version = "0.29", default-features = false, features = ["links", "wayland", "x11"] }
wgpu = { version = "22.1", features = ["webgl", "webgpu"] }
image = "0.25.4"
gloo-timers = { version = "0.3.0", features = ["futures"] }

# emulation
w65c02s = "0.9.2"
rand = { version = "0.8.5" } # do I need both of these?
getrandom = { version = "0.2.12", features = ["js"] } # is this a wasm thing?
bit_field = "0.10.2"
bitfield = "0.14.0"
bytemuck = "1.19.0"

# logging / profiling
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tracing-wasm = "0.2.1"

# audio sybsystem
enum_delegate = "0.2.0"
klingt = "0.1.0" # :D
rtrb = "0.3.1"
petgraph = "0.5.1"
dasp_graph = "0.11.0"
dasp_signal = "0.11.0"
dasp_interpolate = {  version = "0.11.0", features = ["linear", "sinc"] }
dasp_frame = "0.11.0"
dasp_ring_buffer = "0.11.0"

# async, mostly for wgpu
futures = "0.3.31"
pollster = "0.3.0"

# just wasm things
console_error_panic_hook = "0.1"
wee_alloc = "0.4.5"

wasm-bindgen = "0.2.95"
wasm-bindgen-futures = "0.4.45"
web-sys = { version = "0.3.72", features = ["Performance", "ShadowRoot"] }

lab = "0.11.0"
lazy_static = "1.5.0"
once_cell = "1.19.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
thread-priority = "1.1.0"

